# xdg_activate_test

./: Cargo.toml
src/: main.rs
